--- a/TOURIST GUIDE/travelGuide/src/main/resources/templates/SignUpErrorHandle.html
+++ b/TOURIST GUIDE/travelGuide/src/main/resources/templates/SignUpErrorHandle.html
@@ -71,9 +71,18 @@
                 Already have an account? <a href="http://localhost:8080/signin">Sign In</a>
             </div>
 
+
         </form>
     </div>
 </div>
 <div class="help-container"></div>
+<script>
+  
+    //can not go back from signin page after the submission
+    history.pushState(null, null, document.URL);
+    window.addEventListener('popstate', function () {
+    history.pushState(null, null, document.URL);
+  });
+  </script>
 </body>
 </html>
