--- a/TOURIST GUIDE/travelGuide/src/main/resources/templates/SignUpErrorHandle.html
+++ b/TOURIST GUIDE/travelGuide/src/main/resources/templates/SignUpErrorHandle.html
@@ -32,7 +32,7 @@
             <p th:text="${successMessage}"></p>
         </div>
 
-        <form th:object="${user}" action="signupPage" method="POST" name="Formfill" id="Formfill" onsubmit="return validateForm()">
+        <form th:object="${user}" th:action="signup" method="POST" name="Formfill" id="Formfill" onsubmit="return validateForm()">
 
             <div class="text-field" >
                 <input required th:field="*{name}" type="text" placeholder="Name" name="name" id="name" >
