--- a/TOURIST GUIDE/travelGuide/src/main/resources/static/css/SpittelmarktBerlin.css
+++ b/TOURIST GUIDE/travelGuide/src/main/resources/static/css/SpittelmarktBerlin.css
@@ -110,14 +110,6 @@ nav {
   color: darkorange;
 }
 
-.image1 {
-  padding-top: 2%;
-  padding-left: 2%;
-  height: 50%;
-  width: 50%;
-  max-width: 50%;
-  max-height: 50%;
-}
 
 .image-caption {
   padding-left: 2%;
@@ -126,17 +118,16 @@ nav {
 .center {
   position: absolute;
   top: 14%;
-  left: 75%;
+  left: 80%;
   transform: translate(-50%, 0%);
-  width: 45%;
-  height: auto;
+  width: 40%;
+  height: 140%;
   max-width: 100%;
   background: whitesmoke;
   border-radius: 10px;
   box-sizing: border-box;
   display: block;
 }
-
 .center h2 {
   font-family: Georgia;
   color: black;
@@ -145,6 +136,119 @@ nav {
   padding-bottom: 40px;
   border-bottom: 1px solid gray;
   font-size: 25px;
+}
+form {
+  text-align: 0;
+}
+.booknow{
+  font-family: Georgia;
+  color: white;
+  background-color: darkblue;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;;
+  font-size: 25px;
+}
+label {
+  margin-top: 2%;
+  display: block;
+  margin-bottom: 2px;
+  font-weight: bold;
+}
+
+input[type="date"],input[type="email"], input[type="number"], input[type="text"] {
+  margin-left: 0%;
+  width: 70%;
+  padding: 8px;
+  margin-bottom: 16px;
+}
+
+input[type="submit"] {
+  background-color: darkblue;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: 30%;
+}
+
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+
+
+.center2 {
+  position: absolute;
+  padding-top: 5%;
+  left: 2%;
+  transform: translate(0%, 0%);
+  width: 48%;
+  height: auto;
+  max-width: 100%;
+  background: whitesmoke;
+  border-radius: 2px;
+  box-sizing: border-box;
+  display: block;
+}
+.image1 {
+  height: 70%;
+  width: 55%;
+  display: block;
+}
+.image2 {
+  height: 20%;
+  width: 15%;
+  display: block;
+}
+
+.image-cont1{
+  padding-top: 2%;
+  padding-left: 2%;
+  width: 50%px;
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 10px;
+  margin-bottom: 10px;
+ }
+
+.image2{
+  width: 150px;
+  display: block;
+  margin-left: 18%;
+}
+
+.image-cont{
+width: 154px;
+display: inline-block;
+vertical-align: top;
+margin-right: 8px;
+margin-bottom: 10px;
+}
+
+.reg-button {
+  
+  background: white;
+  color: black;
+  float: right;
+  border-radius: 20px;
+  text-decoration: none;
+  font-size: 15px;
+  padding: 8px 20px;
+  font-weight: bold;
+  margin-right: 30px;
+}
+.username{
+  position:relative;
+  right: 40%;
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+.nametext{
+  color: white;
+  font-size: 15px;
+  font-style: italic;
 }
 
 .wrapper {
@@ -199,151 +303,21 @@ nav {
   color: darkorange;
 }
 
-.text {
-  max-height: 1px;
-  overflow: hidden;
-  border-radius: 4px;
-  line-height: 1.4;
-  position: relative;
-  top: 100%;
-  opacity: 0.5;
-  transition: all 0.3s ease;
-  font-size: 18px;
+
+.paymentmethod{
+  margin-left: 0%;
+  width: 70%;
+  padding: 8px;
+  margin-bottom: 16px;
 }
 
-.collapsible input:checked~.text {
-  max-height: 300px;
-  padding-bottom: 25px;
-  background: white;
-  box-shadow: 0 5px 11px 0 rgba(0, 0, 0.1), 0 4px 11px rgba(0, 0, 0, 0.08);
-  opacity: 1;
-  top: 0;
-}
 
-.text h2 {
-  margin-bottom: 10px;
-  padding: 15px 15px 0;
-  color: #1c1c6b;
-}
-
-.text p {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.center2 {
-  position: absolute;
-  padding-top: 5%;
-  left: 2%;
-  transform: translate(0%, 0%);
-  width: 48%;
-  height: auto;
-  max-width: 100%;
-  background: whitesmoke;
-  border-radius: 2px;
-  box-sizing: border-box;
-  display: block;
-}
-.center2 h2 {
-  font-family: Georgia;
-  color: black;
+.success-message{
+  margin-top: 2%;
+  background-color: #4CAF50;
+  color: #fff;
+  padding: 10px; 
+  border-radius: 5px; 
   text-align: center;
-  margin-top: -5%;
-  padding-bottom: 40px;
-  border-bottom: 1px solid gray;
-  font-size: 25px;
-}
-.features:hover{
- border: 5px;
- background-color: rgb(218, 218, 218);
-}
-
-.features {
-  top: 5%;
-  padding-top: 5%;
-  display: flex;
-}
-
-.image {
-  width: 30%;
-  height: auto;
-  max-width: 100%;
-  display: inline-block;
-  margin-top: -5%;
-}
-
-.text-container {
-  display: inline-block;
-  vertical-align: top;
-  text-align: left;
-  max-width: 65%;
-  padding-left: 5%;
-}
-
-.place-name {
-  font-size: 1.5em;
-  margin-bottom: 10px;
-}
-
-.entry-fee {
-  font-size: 1em;
-  color: #555;
-}
-.text1{
-  font-size: 1em;
-  color: #555;
-  font-weight: bold;
-}
-.text2{
-  margin-top: 2%;
-  font-size: 1em;
-  color: rosybrown;
-  font-weight: bold;
-}
-.text3{
-  margin-top: 2%;
-  font-size: 1em;
-  color: rgb(101, 99, 99);
-}
-
-.DEALS {
-  background: darkblue;
-  color: white;
-  float: right;
-  border-radius: 0px;
-  text-decoration: none;
-  font-size: 15px;
-  padding: 8px 20px;
-  font-weight: bold;
-  margin-top: -4%;
-}
-
-.DEALS:hover {
-  transition: 0.4s ease-in-out;
-  color: darkorange;
-}
-
-
-.reg-button {
-  
-  background: white;
-  color: black;
-  float: right;
-  border-radius: 20px;
-  text-decoration: none;
-  font-size: 15px;
-  padding: 8px 20px;
-  font-weight: bold;
-  margin-right: 30px;
-}
-.username{
-  position:relative;
-  right: 40%;
-  padding-top: 5%;
-  padding-bottom: 5%;
-}
-.nametext{
-  color: white;
-  font-size: 15px;
-  font-style: italic;
+  width: 70%;
 }
