--- a/TOURIST GUIDE/travelGuide/src/main/resources/static/css/userProfile.css
+++ b/TOURIST GUIDE/travelGuide/src/main/resources/static/css/userProfile.css
@@ -100,47 +100,35 @@ nav{
  padding-right: 30%;
  box-sizing: border-box;
 }
-form .text-field{
-  position: relative;
-  border-bottom: 2px solid gray;
-  margin: 30px 0;
-  
-}
-.text-field input{
-  width: 50%;
-  padding: 0 5px;
-  height: 40px;
-  font-size: 16px;
-  border: none;
-  background: none;
-  outline: none;
-  font-weight:500;
-  font-family: sans-serif;
-  position: relative;
-  font-weight: bold;
-  
-}
-input[type="submit"]{
-  width: 105%;
-  height: 50px;
-  border: 1px solid;
-  background: darkblue;
-  border-radius: 25px;
-  font-size: 18px;
+.reg-button {
+  margin-top: 15%;
+  background-color: darkblue;
   color: white;
-  font-weight: 700;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
   cursor: pointer;
-  outline: none;
+  margin-left: 30%;
 }
-input[type="submit"]:hover{
-  color: darkorange;
-  transition: .5s;
-}
+
+
 .success-message{
-  background-color: #4CAF50; 
+  background-color: #4CAF50;
   color: #fff;
   padding: 10px;
   border-radius: 5px;
   text-align: center;
   margin-top: 20px;
+}
+
+.username{
+  position:relative;
+  right: 40%;
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+.nametext{
+  color: white;
+  font-size: 15px;
+  font-style: italic;
 }
